# alfred-autoresearch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/autoresearch/: __init__.py  cli.py
src/autoresearch/core/: confidence.py  engine.py  metrics.py
tests/: test_autoresearch.py
