[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresearch"
version = "1.1.0"
description = "Standalone Python SDK for autonomous experiment loops — try ideas, keep what works, discard what doesn't."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jose Manuel Sabarís García", email = "joker@lllljokerllll.dev" },
]
keywords = ["autoresearch", "benchmarking", "optimization", "experiment", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
git = [
    "gitpython>=3.1",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
autoresearch = "autoresearch.cli:main"

[project.urls]
Homepage = "https://github.com/llllJokerllll/alfred-autoresearch"
Repository = "https://github.com/llllJokerllll/alfred-autoresearch"
Issues = "https://github.com/llllJokerllll/alfred-autoresearch/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
